--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@ html,
 body {
     padding: 0;
     margin: 0;
+    font-family: 'Press Start 2P', cursive;
 }
 
 canvas {
     padding: 0;
     margin: auto;
     display: block;
-    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
@@ -16,5 +16,6 @@ canvas {
 }
 
 h1 {
+    margin: 15px;
     text-align: center;
 }
