--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,12 @@ h1 {
     margin: 15px;
     text-align: center;
 }
+
+#credits {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    margin: auto;
+    left: 0;
+    right: 0;
+}
