--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ button {
   ##Screen = B/w 1025px to 1280px
 */
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 1025px) {
     #controls {
         display: none;
     }
