--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,12 @@ h1 {
 
 #controls>div {
     width: 100%;
-    height: 110px;
+    height: 130px;
 }
 
 button {
     width: 150px;
-    height: 90px;
+    height: 120px;
     margin: 10px 40px;
     position: absolute;
 }
@@ -68,7 +68,7 @@ button {
 
 #bomb {
     right: 10%;
-    width: 200px;
+    width: 220px;
 }
 
 
@@ -80,5 +80,51 @@ button {
 @media (min-width: 1025px) {
     #controls {
         display: none;
+    }
+    .sidebar {
+        position: absolute;
+        right: 15px;
+        border: 2px solid black;
+        border-radius: 5px;
+        height: 25vh;
+        padding: 10px;
+    }
+}
+
+.sidebar h3 {
+    margin: 0;
+    margin-bottom: 15px;
+    border-bottom: 2px solid black;
+    text-align: center;
+}
+
+.sidebar ul {
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar li {
+    margin-bottom: 5px;
+}
+
+.sidebar a {
+    cursor: pointer;
+}
+
+.sidebar a:hover {
+    border-bottom: 2px solid black;
+}
+
+@media (max-width: 1024px) {
+    .sidebar {
+        position: absolute;
+        bottom: 10%;
+        border: 2px solid black;
+        border-radius: 5px;
+        height: 10vh;
+        margin: 20px;
+        padding: 10px;
+        left: 0;
+        right: 0;
     }
 }
