--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,6 @@ button {
 
 /* 
   ##Device = Laptops, Desktops
-  ##Screen = B/w 1025px to 1280px
 */
 
 @media (min-width: 1025px) {
@@ -83,11 +82,16 @@ button {
     }
     .sidebar {
         position: absolute;
-        right: 15px;
         border: 2px solid black;
         border-radius: 5px;
         height: 25vh;
         padding: 10px;
+    }
+    .sidebar.left {
+        left: 15px;
+    }
+    .sidebar.right {
+        right: 15px;
     }
 }
 
