--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ h1 {
 #controls {
     text-align: center;
     position: absolute;
-    bottom: 50%;
+    bottom: 42%;
     margin: auto;
     left: 0;
     right: 0;
@@ -47,6 +47,8 @@ h1 {
 }
 
 button {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 24px;
     width: 150px;
     height: 120px;
     margin: 10px 40px;
